# par-reputation

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
adrs/: 001-anchor-to-ap2-mandate-not-self-attestation.md  002-operator-independence-signal.md  003-settlement-oracle-and-refund-semantics.md
demo/: eval_independence.py  independence_demo.py  run_demo.py
docs/diagrams/: 01-layering.dot  01-layering.mmd  02-mint-verify.dot  02-mint-verify.mmd  03-settlement-states.dot  03-settlement-states.mmd  04-independence.dot  04-independence.mmd  README.md
preprint/: par.bib  par.md  par.tex
specification/: Par.cfg  Par.tla
src/par/: canonical.py  identity.py  mint.py  verify.py
src/par/adapters/: ap2.py
src/par/signals/: independence.py
src/par/types/: vir.py
src/par/validators/: invariants.py
tests/: conftest.py  test_ap2_real_mandate.py  test_identity_depth.py  test_independence.py  test_invariants.py  test_mint_verify.py
v1/: SPEC.md  manifest.json
