[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "par-reputation"
version = "0.1.0"
description = "Provenance-Anchored Reputation (PAR): a standardized evidence layer for agent reputation, anchored to AP2 payment mandates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ravi Kiran Kadaboina" }]
dependencies = ["pydantic>=2.5"]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
